--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="jumbotron">
         <h1>The Truth Is Out There</h1>
       </div>
-      <div class="container-fluid">
+   <div class="container-fluid">
         <div class="row">
           <div class="col-md-4">
             <h3>UFO Sightings: Fact of Fancy? <small>Ufologists Weigh In</small></h3>
@@ -33,6 +33,42 @@
 
 
             </p>
+          </div>
+        </div>
+      </div>
+   <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-3">
+            <form>
+                <p>Filter Search</p>
+                <ul>
+                  <li>
+                    <label for="date">Enter Date</label>
+                    <input type="text" placeholder="1/10/2010" id="datetime" />
+                  </li>
+                  <li>
+                     <button id="filter-btn" type="button" class="btn btn-default">
+                       Filter Table
+                     </button>
+                  </li>
+                </ul>
+               </form>
+          </div>
+          <div class="col-md-9">
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>City</th>
+                    <th>State</th>
+                    <th>Country</th>
+                    <th>Shape</th>
+                    <th>Duration</th>
+                    <th>Comments</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
           </div>
         </div>
       </div>
