--- a/index.html
+++ b/index.html
@@ -44,23 +44,23 @@
             <form class="bg-dark">
                 <p>Filter Search</p>
                 <ul class="bg-dark">
-                  <li class="bg dark">
+                  <li class="bg-dark">
                     <label for="date">Enter Date</label>
                     <input type="text" placeholder="1/10/2010" id="datetime" />
                   </li>
-                  <li class="bg dark">
+                  <li class="bg-dark">
                     <label for="city">Enter City</label>
                     <input type="text" placeholder="Fresno" id="city" />
                   </li>
-                  <li class="bg dark">
+                  <li class="bg-dark">
                     <label for="state">Enter State</label>
                     <input type="text" placeholder="Ca" id="state" />
                   </li>
-                  <li class="bg dark">
+                  <li class="bg-dark">
                     <label for="country">Enter Country</label>
                     <input type="text" placeholder="US" id="country" />
                   </li>
-                  <li class="bg dark">
+                  <li class="bg-dark">
                     <label for="shape">Enter Shape</label>
                     <input type="text" placeholder="circle" id="shape" />
                   </li>
