--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
                   </li>
                   <li class="bg-dark">
                     <label for="city">Enter City</label>
-                    <input type="text" placeholder="Fresno" id="city" />
+                    <input type="text" placeholder="fresno" id="city" />
                   </li>
                   <li class="bg-dark">
                     <label for="state">Enter State</label>
-                    <input type="text" placeholder="Ca" id="state" />
+                    <input type="text" placeholder="ca" id="state" />
                   </li>
                   <li class="bg-dark">
                     <label for="country">Enter Country</label>
-                    <input type="text" placeholder="US" id="country" />
+                    <input type="text" placeholder="us" id="country" />
                   </li>
                   <li class="bg-dark">
                     <label for="shape">Enter Shape</label>
